# CppPySide

./: CMakeLists.txt  MyScript.py  MyScript2.py  README.md  main.cpp  main2.cpp
